acronym alignment + arch diagram

--- a/docs/proposals/20240205-mistral.md
+++ b/docs/proposals/20240205-mistral.md
@@ -9,7 +9,7 @@ last-updated: 2024-02-02
 status: provisional
 ---
 # Title
-Add mistral-7b to Kaito supported model list.
+Add mistral-7b to KAITO supported model list.
 
 ## Glossary
 N/A
