--- a/docs/proposals/20250103-qwen2.5-coder.md
+++ b/docs/proposals/20250103-qwen2.5-coder.md
@@ -10,7 +10,7 @@ status: provisional
 ---
 
 # Title
-Add Qwen 2.5 Coder to Kaito supported model list
+Add Qwen 2.5 Coder to KAITO supported model list
 
 ## Glossary
 N/A
