--- a/docs/proposals/20240206-phi-2.md
+++ b/docs/proposals/20240206-phi-2.md
@@ -9,7 +9,7 @@ last-updated: 2024-02-06
 status: provisional
 ---
 # Title
-Add phi-2 to Kaito supported model list.
+Add phi-2 to KAITO supported model list.
 
 ## Glossary
 N/A
