test: add e2e test cases for multi-node distributed inference
Signed-off-by: Ernest Wong <chwong719@gmail.com>

--- a/docs/proposals/20250529-llama-3.3-70b-instruct.md
+++ b/docs/proposals/20250529-llama-3.3-70b-instruct.md
@@ -83,5 +83,5 @@ This section describes how to configure the runtime framework to support the inf
 # History
 
 - [x] 2025-05-29: Open proposal PR.
-- [ ] YYYY-MM-DD: Start model integration.
-- [ ] YYYY-MM-DD: Complete model support.
+- [x] 2025-06-05: Start model integration.
+- [x] 2025-06-05: Complete model support.
