--- a/website/docs/proposals/20250529-llama-3.3-70b-instruct.md
+++ b/website/docs/proposals/20250529-llama-3.3-70b-instruct.md
@@ -3,7 +3,7 @@ title: Proposal for new model support
 authors:
   - "@chewong"
 reviewers:
-  - "Kaito contributor"
+  - "KAITO contributor"
 creation-date: 2025-05-29
 last-updated: 2025-05-29
 status: provisional
@@ -11,7 +11,7 @@ status: provisional
 
 # Title
 
-Add [meta-llama/Llama-3.3-70B-Instruct](https://huggingface.co/meta-llama/Llama-3.3-70B-Instruct) to Kaito supported model list
+Add [meta-llama/Llama-3.3-70B-Instruct](https://huggingface.co/meta-llama/Llama-3.3-70B-Instruct) to KAITO supported model list
 
 ## Glossary
 
